# ni-syscfg-rs

./: .gitignore  Cargo.toml  README.md
ni-syscfg/: Cargo.toml
ni-syscfg-sys/: Cargo.toml  build.rs  generate-bindings.ps1
ni-syscfg-sys/include/: wrapper.h
ni-syscfg-sys/src/: bindings.rs  lib.rs
ni-syscfg/src/: error.rs  experts.rs  handles.rs  hardware_filter.rs  lib.rs  parameters.rs  resources.rs  session.rs  software.rs  strings.rs  types.rs
ni-syscfg/src/system/: mod.rs  network.rs  real_time.rs
ni-syscfg/tests/: list_hardware.rs
