[package]
name = "ni-syscfg-sys"
build = "build.rs"
links = "nisyscfg"
version = "20.5.0"
edition = "2021"
license = "MIT"
description = "System bindings for the NI System Configuration API"
keywords = ["ni", "ffi"]
categories = ["external-ffi-bindings"]
readme = "../README.md"
repository = "https://github.com/WiresmithTech/ni-syscfg-rs"
homepage = "https://github.com/WiresmithTech/ni-syscfg-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

